# blog

./: .eslintrc.json  .gitignore  .todo.md.kak.XjK9co  astro.config.mjs  decs.d.ts  flake.nix  package-lock.json  package.json  quotes.json  todo.md  todo.mkd  vitest.config.ts  write.js
blah/: flake.nix  result
blog/: index.css  index.md
blog/books/: summary.md
blog/books/Nudge/: content.md  meta.json
blog/competitive programming/: summary.md
blog/competitive programming/Minimum-Value-to-Get-Positive-Step-by-Step-Sum/: content.md
blog/competitive programming/accounts-merge/: content.md
blog/competitive programming/binary-tree-tilt/: content.md  meta.json
blog/competitive programming/car-pooling/: content.md
blog/leetcode/car-pooling/: meta.json
components/layout/: code.tsx  header.tsx  layout.tsx
components/post/: decrypt.tsx
fastsqrt/: CMakeLists.txt  cmake_install.cmake  flake.nix
fastsqrt/src/: benches.cc  fastsqrt.hpp
helpers/: blah.ts  capitalize_words.ts  constants.ts  get_posts.ts  html_to_dom.tsx  md_transformer.tsx  month_diff.ts  post_title.ts  random_color.ts  types.ts
pages/: 404.tsx  _app.tsx  index.tsx
pages/blog/: index.tsx
pages/resume/: index.tsx
src/: consts.ts
src/components/: BaseHead.astro  BlogLayout.astro  Layout.astro
src/pages/: index.md
src/styles/: global.css
src/transformers/: asides.ts  newthought.ts
static/: 404.md  blog_directory.md  index.css  index.md
static/blog/: bazel.md  nix_vscode.md
styles/: globals.css  globals.scss
test/transformers/: aside.test.ts  newthought.test.ts  remark.ts
(+160 files in other folders)
